--- a/src/components/projects.json
+++ b/src/components/projects.json
@@ -1,12 +1,21 @@
 [   
-    { "id": "1", "title": "Basic webpage", "tags": ["HTML", "CSS"], "date": "11-08-2020" },
-    { "id": "2", "title": "A basic SPA about travelling", "tags": ["HTML", "CSS"], "date": "18-08-2020" },
-    { "id": "3", "title": "A quiz template", "tags": ["HTML", "Javascript", "CSS"], "date": "25-08-2020" },
-    { "id": "4", "title": "Javascript game", "tags": ["Javascript", "HTML", "CSS"], "date": "01-09-2020" },
-    { "id": "5", "title": "Ceaser Cipher", "tags": ["Javascript", "HTML", "CSS"], "date": "08-09-2020" },
-    { "id": "6", "title": "Calculator App", "tags": ["React.js", "CSS", "SCSS", "HTML"], "date": "15-09-2020" },
-    { "id": "7", "title": "Social Site", "tags": ["React.js", "CSS", "HTML"], "date": "22-09-2020" },
-    { "id": "8", "title": "Old Portfolio", "tags": ["CSS", "HTML"], "date": "29-09-2020" },
-    { "id": "9", "title": "Weather App", "tags": ["Javascript", "HTML", "CSS"], "date": "14-10-2020" },
-    { "id": "10", "title": "Event App", "tags": ["React.js", "Mongo", "Express.js", "Node.js", "CSS", "HTML"], "date": "28-10-2020" }
+    { "id": "1", "src": "/images/BasicWeb.png", "text": "A basic webpage discussing git and unix.", "tags": ["HTML", "CSS"], "path": "https://github.com/MSearle00/Project-1", "date": "11-08-2020" },
+
+    { "id": "2", "src":"/images/TravelSPA.png", "text": "A basic SPA about travelling", "tags": ["HTML", "CSS"], "path":"https://github.com/MSearle00/project-2-travel-bucketlist", "date": "18-08-2020" },
+
+    { "id": "3","src":"/images/Quiz.png", "text": "A quiz template", "tags": ["HTML", "Javascript", "CSS"], "path":"https://github.com/MSearle00/project-3-quiz", "date": "25-08-2020" },
+
+    { "id": "4","src":"/images/Game.png", "text": "A Javascript game made with OOP methods", "tags": ["Javascript", "HTML", "CSS"], "path":"https://github.com/MSearle00/project-4-game", "date": "01-09-2020" },
+
+    { "id": "5", "src": "/images/Ceaser.png", "text": "A Ceaser Cipher", "tags": ["Javascript", "HTML", "CSS"], "path":"https://github.com/MSearle00/project-5-ceaserCipher", "date": "08-09-2020" },
+
+    { "id": "6", "src":"/images/CalculatorApp.png", "text": "A  Calculator application, with memory functions.", "tags": ["React.js", "CSS", "SCSS", "HTML"], "path":"'https://github.com/MSearle00/project-7-calculator'", "date": "15-09-2020" },
+
+    { "id": "7", "src":"/images/SocialSite.png", "text": "A start on a social site template", "tags": ["React.js", "CSS", "HTML"], "path":"https://github.com/MSearle00/project-8-social-site", "date": "22-09-2020" },
+
+    { "id": "8", "src":"/images/OldPortfolio.png", "text": "My first attempt at a portfolio site, a play around with CSS", "tags": ["CSS", "HTML"], "path":"https://github.com/MSearle00/project-9-portfolio-site", "date": "29-09-2020" },
+
+    { "id": "9", "src":"/images/WeatherApp.png", "text": "A vanilla JS Weather App with search function using OpenWeatherMap API", "tags": ["Javascript", "HTML", "CSS"], "path": "https://github.com/MSearle00/project-11-weatherapp", "date": "14-10-2020" },
+
+    { "id": "10", "src":"/images/EventApp.png", "text": "An event app with a user log-in and sign-up managed by MongoDB.", "tags": ["React.js", "Mongo", "Express.js", "Node.js", "CSS", "HTML"], "path": "https://github.com/MSearle00/project-12-eventapp", "date": "28-10-2020" }
     ] 
