--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://msearle00.github.io/portfolio/",
-  "name": "navbar-dropdown-v1",
+  "homepage": "https://msearle00.github.io/portfolio",
+  "name": "portfolio_site",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
     "emailjs-com": "^2.6.4",
-    "gh-pages": "^3.1.0",
     "rbx": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -41,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "json-loader": "^0.5.7"
   }
 }
